# gnu_reindeer

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  bootstrap  configure.ac  reindeer.m4  reindeer.pc.in
debug/: debug.c
doc/: about.docbook  basic-example.docbook  buffers.docbook  color-arrays.docbook  colors.docbook  common.xsl  compiling.docbook  coord-arrays.docbook  data-blocks.docbook  fdl-1.3.docbook  html-chunk.xsl  html.xsl  init-fini.docbook  lights.docbook  materials.docbook  matrices.docbook  normal-arrays.docbook  objects.docbook  obtaining.docbook  reindeer.docbook  templates.docbook  thread-safety.docbook  transformation.docbook  types.docbook  vector-arrays.docbook  vectors.docbook
m4/: gnulib-cache.m4
reindeer/: Makefile.am  backdata.c  backdata.h  backend.h  color.c  colorarray.c  coordarray.c  datablock.c  error.c  functable.h  impl-macros.h  indexarray.c  light.c  material.c  matrix.c  normalarray.c  object.c  object.h  reindeer-0.0.pc.in  reindeer-0.1.pc.in  reindeer-0.2.pc.in  reindeer.c  reindeer.h  reindeer.pc.in  template.c  template.h  util.c  vector.c  vectorarray.c  vertexarray.c  vertexarray.h
ren/: Makefile.am  base.h  color.h  colorarray.h  coordarray.h  datablock.h  funcdefs.h  funcs.h  impl.h  indexarray.h  light.h  material.h  matrix.h  normalarray.h  object.h  real.h  reindeer-0.2.vapi  ren.h  template.h  tmpl.h  types.h  util.h  vector.h  vectorarray.h  version.h.in
